Horizonriver PRD21-Mar-2017/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ClinicGeneralEmail__c</fullName>
        <formula>Contact.ClinicGeneralEmail__c</formula>
        <label>Clinic General Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicNumber__c</fullName>
        <formula>Opportunity.Account.Store_Number__c</formula>
        <label>Clinic Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Envelope_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Envelope</label>
        <referenceTo>dsfs__DocuSign_Envelope__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocusignStatus__c</fullName>
        <label>Docusign Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <formula>TEXT(Opportunity.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30 Days</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuoteFromDirectPhone__c</fullName>
        <formula>QuoteFromOLD__r.Phone</formula>
        <label>Direct Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteFromEmail__c</fullName>
        <formula>QuoteFromOLD__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteFromFax__c</fullName>
        <formula>QuoteFromOLD__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteFromMobile__c</fullName>
        <formula>QuoteFromOLD__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteFromOLD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote FromOLD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteFrom</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (QuoteFrom)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>Quote Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_From__c</fullName>
        <formula>$User.FirstName &amp;&quot; &quot;&amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Opportunity.Account.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Sales_Taxs__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <summarizedField>QuoteLineItem.Sub_Total__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Sales_Taxs__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Before_Taxes__c</fullName>
        <formula>TotalPrice - Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Before Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransCode__c</fullName>
        <defaultValue>&apos;995101&apos;</defaultValue>
        <label>TransCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Opportunity.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>